# name: test_delete_member[uvloop-groups]
  'bar'
---
# name: test_delete_member[uvloop-groups].1
  <class 'dict'> {
    '_id': 'foo',
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'baz',
      },
    ],
    'users': <class 'list'> [
      <class 'dict'> {
        'id': 'bar',
      },
      <class 'dict'> {
        'id': 'baz',
      },
    ],
  }
---
# name: test_delete_member[uvloop-users]
  'bar'
---
# name: test_delete_member[uvloop-users].1
  <class 'dict'> {
    '_id': 'foo',
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'bar',
      },
      <class 'dict'> {
        'id': 'baz',
      },
    ],
    'users': <class 'list'> [
      <class 'dict'> {
        'id': 'baz',
      },
    ],
  }
---
# name: test_edit_member[uvloop-group-None]
  <class 'dict'> {
    'build': True,
    'id': 'baz',
    'modify': False,
    'modify_otu': False,
    'remove': True,
  }
---
# name: test_edit_member[uvloop-group-None].1
  <class 'dict'> {
    '_id': 'foo',
    'groups': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': True,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': True,
      },
    ],
    'users': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
    ],
  }
---
# name: test_edit_member[uvloop-group-reference]
  None
---
# name: test_edit_member[uvloop-group-reference].1
  None
---
# name: test_edit_member[uvloop-group-subdocument]
  None
---
# name: test_edit_member[uvloop-group-subdocument].1
  <class 'dict'> {
    '_id': 'foo',
    'groups': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
    ],
    'users': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
    ],
  }
---
# name: test_edit_member[uvloop-user-None]
  <class 'dict'> {
    'build': True,
    'id': 'baz',
    'modify': False,
    'modify_otu': False,
    'remove': True,
  }
---
# name: test_edit_member[uvloop-user-None].1
  <class 'dict'> {
    '_id': 'foo',
    'groups': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
    ],
    'users': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': True,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': True,
      },
    ],
  }
---
# name: test_edit_member[uvloop-user-reference]
  None
---
# name: test_edit_member[uvloop-user-reference].1
  None
---
# name: test_edit_member[uvloop-user-subdocument]
  None
---
# name: test_edit_member[uvloop-user-subdocument].1
  <class 'dict'> {
    '_id': 'foo',
    'groups': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
    ],
    'users': <class 'list'> [
      <class 'dict'> {
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
      <class 'dict'> {
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      },
    ],
  }
---
# name: test_fetch_and_update_release[uvloop-200]
  <class 'dict'> {
    'etag': None,
    'name': '1.0.0-fake-release',
    'newer': True,
    'retrieved_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: test_fetch_and_update_release[uvloop-304]
  <class 'dict'> {
    'body': '
      #### Changed
      - make versions prior to `v3.0.0` update to `v3.0.0` before updating further
      
      #### Fixed
      - fix bug where owner of sample is prevented from analyzing it (#1234)
      - use correct noun (not _OTU_) for sample removal dialog title (#1222)
    ',
    'content_type': 'application/gzip',
    'download_url': 'https://github.com/virtool/virtool/releases/download/v3.1.0/virtool.tar.gz',
    'etag': '"f1a3f4d9330494be0ea4bb8de666cb21"',
    'filename': 'v3.1.0',
    'html_url': 'https://github.com/virtool/virtool/releases/tag/v3.1.0',
    'name': 'v3.1.0',
    'newer': True,
    'published_at': '2018-12-14T21:16:24Z',
    'retrieved_at': datetime.datetime(2015, 10, 6, 20, 0),
    'size': 44815711,
  }
---
# name: test_fetch_and_update_release[uvloop-404]
  <class 'dict'> {
    'etag': None,
    'name': '1.0.0-fake-release',
    'newer': True,
    'retrieved_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
